[package]
name = "frekled_device"
version = "0.1.0"
edition = "2021"

[dependencies]
frekled_util = { path = "../frekled_util" }
esp-hal = { version = "0.20.1", features = [ "esp32s3", "debug", "log" ] }
esp-println = { version = "0.11.0", features = ["esp32s3", "log"] }
critical-section = "1.1.3"
esp-backtrace = { version = "0.14.1", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "println",
] }
fugit = "0.3.7"
log = { version = "0.4.21" }
